# samp-discord-connector

./: .gitignore  .gitmodules  CMakeLists.txt  Earthfile  Taskfile.yml  discord-connector.inc.in
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
src/: main.cpp  natives.cpp  natives.hpp
